--- a/style.css/kalender.css
+++ b/style.css/kalender.css
@@ -207,9 +207,9 @@ label[for="menu-bar"]  {
         position: absolute;
         width: 200px;
         height: auto;
-        top: 17%;
+        top: 12%;
         left: 50%;
-        transform: translate(-50%, -50%); 
+        transform: translate(-50%, -50%);
     }
 
     h1 {
@@ -235,7 +235,7 @@ label[for="menu-bar"]  {
     }
     
     body {
-        height: 330vh;
+        height: 340vh;
     }
     
 }
@@ -247,7 +247,7 @@ label[for="menu-bar"]  {
     }
    
     body {
-        height: 280vh;
+        height: 170vh;
     }
     
     
@@ -393,7 +393,7 @@ label[for="menu-bar"]  {
     @media (max-width: 610px) {
    
         body {
-            height: 270vh;
+            height: 165vh;
         }
 
         p {
@@ -430,7 +430,7 @@ label[for="menu-bar"]  {
  @media (max-width: 478px) {
    
     body {
-        height: 250vh;
+        height: 153vh;
     }
     
     main {
@@ -450,3 +450,66 @@ label[for="menu-bar"]  {
                
 
     }
+
+    @media (max-width: 1002px) and (min-width: 810px) {
+
+       
+        header .navbar ul {
+            list-style-type: none;
+            display: flex;
+            flex-wrap: nowrap;
+            flex-direction: row;
+            justify-content: space-around;
+           
+        }
+
+       
+
+        p {
+            text-align: start;
+            font-size: 1.7rem;
+            margin: 20px 0px;
+        }
+
+        header .navbar ul li a {
+            text-decoration: none;
+            padding: 40px 0px;
+            display: block;
+            color: var(--primary-color);
+            font-size: 30px;
+            font-weight: 1000;
+            font-family: 'Orbitron', "Open sans", "Roboto", sans-serif;
+        }
+
+        body {
+            height: 170vh;
+        }
+
+    }
+
+    @media (min-width: 1003px) {
+    
+
+
+
+    p {
+        font-size: 2rem;
+        font-weight: 500;
+    }
+
+
+
+    .logo {
+        position: absolute;
+        width: 300px;
+        height: auto;
+        top: 19%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+
+    body {
+        height: 255vh;
+    }
+
+}
