--- a/style.css/info.css
+++ b/style.css/info.css
@@ -14,16 +14,19 @@ body {
     background-image: url(../img/baggrund.webp);
     background-size: cover;
     background-repeat: no-repeat;
-    height: 975vh;
+    height: 950vh;
     font-family: "Roboto+mono", Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .logo {
     position: absolute;
-    width: 350px;
-    margin-left: 35rem;
-    
+    width: 300px;
+    height: auto;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -50%); 
 }
+
 
 #information {
     color: var(--secondary-color);
@@ -232,3 +235,464 @@ header label {
     margin-top: 25px;
 }
 
+/*Navbarrens redigering*/
+header .navbar ul {
+    list-style-type: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    
+}
+
+header .navbar ul li {
+    position: relative;
+
+}
+
+
+
+header .navbar ul li a {
+    text-decoration: none;
+    padding: 40px;
+    display: block;
+    color: var(--primary-color);
+    font-size: 30px;
+    font-weight: 1000;
+    font-family: 'Orbitron', "Open sans", "Roboto", sans-serif;
+}
+
+header .navbar ul li a:hover {
+    background: var(--primary-color);
+    color: var(--secondary-color);
+   
+    
+}
+
+
+header .navbar ul li ul {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background: var(--secondary-color);
+    display: none;
+    z-index: 100;
+}
+
+
+
+header .navbar ul li ul li a{
+    margin: 20px -20px;
+    font-size: 30px;
+    font-weight: 600;
+    color: var(--primary-color);
+}
+
+header .navbar ul li ul li a:hover {
+    background: var(--primary-color);
+    color: var(--secondary-color);
+  
+}
+
+
+header .navbar ul li:hover > ul {
+    display: block; /* Viser submenuen */
+
+}
+
+
+header .navbar ul li:focus-within > ul ,
+header .navbar ul li:hover > ul {
+    display: block;
+}
+
+#menu-bar {
+    display: none;
+}
+
+label[for="menu-bar"]  {
+    font-size: 20px;
+    color: #333;
+    cursor: pointer;
+    display: none;
+}
+
+.footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-top: 60px;
+    border-top: 2px solid var(--primary-color);
+}
+
+#logo {
+    width: 20%;
+    height: auto;
+    margin-left: 15px;
+}
+
+#adresse {
+    width: 40%;
+    margin-bottom: -5px;
+    margin-left: -50px;
+
+}
+
+
+#insta {
+    width: 100%;
+    margin-left: -5px;
+   
+}
+
+
+@media (max-width: 907px) {
+    header .navbar ul {
+        list-style-type: none;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        max-width: 100%;
+   
+    }
+
+
+ 
+    header .navbar ul li {
+        position: relative;
+    }
+
+    header .navbar ul li a {
+        text-decoration: none;
+        display: block;
+        color: var(--primary-color);
+        font-weight: 1000;
+        font-size: 1.7rem;
+        white-space: nowrap;
+        
+      
+    }
+
+    .logo {
+        position: absolute;
+        width: 200px;
+        height: auto;
+        top: 12%;
+        left: 50%;
+        transform: translate(-50%, -50%); 
+    }
+
+    h1 {
+        text-align: center;
+        margin-top: 250px;
+        font-size: 3rem;
+        
+    }
+    p {
+        color: #000;
+        text-align: start;
+        font-size: 1.7rem;
+        margin: 40px 40px 80px 60px;
+        font-weight: 500;
+    }
+    
+    .event {
+        width: 80%;
+    }
+    
+    
+}
+
+@media (max-width: 809px) {
+
+    #program {
+        color: var(--primary-color);
+    }
+   
+    body {
+        height: 555vh;
+    }
+    
+    h1 {
+        font-size: 3rem;
+        margin: 300px 40px 20px 40px;
+        text-align: center;
+        
+    }
+
+    
+    
+    header {
+        padding: 10px 20px 10px 10px;
+        display: flex;
+        justify-content: end;
+      
+        } 
+
+    
+                
+        header .navbar {
+        display: none;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: #0040ff;
+        width: 320px;
+        position: absolute;
+        top: 60px;
+        left: 10;
+        box-sizing: border-box;
+
+        }
+                
+        label[for="menu-bar"] {
+        display: block;
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        cursor: pointer;      
+                
+        }
+                
+        #menu-bar:checked ~ nav.navbar {
+        display: flex;
+       
+       
+        }
+                
+        .menubillede {
+        width: 50px;
+
+        }
+
+        header .navbar ul {
+            flex-direction: column;
+            align-items: center;
+            width: 100%;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            
+        }
+
+       
+        header .navbar ul li  {
+            position: relative;
+            width: 100%;
+            
+        }
+
+        header .navbar ul li a {
+            font-size: 2rem;
+            font-weight: 600;
+            padding: 25px;
+            text-align: center;
+            display: block;
+            box-sizing: border-box;
+            
+        }
+
+     
+
+        header .navbar ul li ul {
+            position: static;
+            display: none;
+            width: 100%;
+            background-color: var(--secondary-color);
+            margin: 0;
+            padding: 0;
+        
+        }
+        
+
+        header .navbar ul li a:hover {
+            background:var(--secondary-color);
+            color: var(--primary-color);
+            text-align: start;
+            width: 100%;
+            
+        }
+
+        
+        header .navbar ul li ul li a{
+            text-align: left;
+            background-color: var(--primary-color);
+            color: var(--secondary-color);
+            margin: 0;
+        
+            
+          
+        }
+
+        main {
+            margin: 20px 50px;
+        }
+
+        h2 {
+            text-align: center;
+            color: var(--primary-color);
+            font-size: 3.5rem;
+            margin-bottom: 10px;
+            font-family: 'Orbitron', "Open sans", "Roboto", sans-serif;
+        }
+
+        h3 {
+            text-align: center;
+            color: var(--primary-color);
+            font-size: 2.2rem;
+            margin-bottom: 10px;
+            font-family: 'Orbitron', "Open sans", "Roboto", sans-serif;
+        }
+        
+        .ikoner {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: repeat(3, auto);
+            align-items: center;
+            gap: 55px;
+            width: 50%;
+            margin: 0 auto;
+            margin-bottom: 150px;
+            border: none;
+           
+        }
+        
+    header .navbar ul li a:active + ul,
+    header .navbar ul li a:focus + ul {
+        display: block; /* Viser dropdown på klik i mobil */
+       
+    }
+
+    header .navbar ul li:hover > ul {
+        display: none; /* Hover er slået fra i mobilvisning */
+    }
+                
+
+    p {
+        text-align: start;
+        font-size: 1.5rem;
+        margin: 25px 0px;
+        font-weight: 500;
+        line-break: auto;
+    }
+
+    }
+
+    @media (max-width: 610px) {
+   
+        body {
+            height: 300vh;
+        }
+        .footer {
+      
+            
+            padding: 10px;
+             }
+                         
+             #logo {
+             display: none;
+             }
+                         
+             #adresse {
+             width: 40%;
+             margin-top: -16px;
+             margin-left: 10px;
+             }
+                         
+                         
+             #insta {
+             width: 100%;
+             }
+       
+            }
+    
+ @media (max-width: 478px) {
+   
+    body {
+        height: 245vh;
+    }
+    
+    main {
+        margin: 20px 0px;
+    }
+    h1 {
+        font-size: 2.7rem;
+        margin-top: 250px;
+    }
+
+   
+    p {
+        font-size: 1.3rem;
+        font-weight: 450;
+       
+    }
+   
+    .event {
+        width: 70%;
+    }
+                   
+
+    }
+
+
+    @media (max-width: 1002px) and (min-width: 810px) {
+
+    body {
+        height: 170vh;
+    }
+       
+        header .navbar ul {
+            list-style-type: none;
+            display: flex;
+            flex-wrap: nowrap;
+            flex-direction: row;
+            justify-content: space-around;
+           
+        }
+
+        
+
+        p {
+            
+            text-align: start;
+            font-size: 1.7rem;
+            margin: 20px 60px;
+        }
+
+        header .navbar ul li a {
+            text-decoration: none;
+            padding: 40px 0px;
+            display: block;
+            color: var(--primary-color);
+            font-size: 30px;
+            font-weight: 1000;
+            font-family: 'Orbitron', "Open sans", "Roboto", sans-serif;
+        }
+
+    }
+
+
+    @media (min-width: 1003px) {
+      
+        p {
+            
+            text-align: start;
+            font-size: 1.7rem;
+            margin: 40px 60px;
+        }
+      
+    
+        .logo {
+            position: absolute;
+            width: 300px;
+            height: auto;
+            top: 19%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+    
+        body {
+            height: 295vh;
+        }
+       
+    }
