--- a/style.css/stot.css
+++ b/style.css/stot.css
@@ -18,11 +18,14 @@ body {
     font-family: "Roboto+mono", Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+
 .logo {
     position: absolute;
-    width: 350px;
-    margin-left: 35rem;
-    
+    width: 300px;
+    height: auto;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -50%); 
 }
 
 #stott {
@@ -59,6 +62,8 @@ h2 {
     margin-bottom: -60px;
     
 }
+
+
 
 #circle1, #circle5 {
     margin-top: -350px;
@@ -103,7 +108,9 @@ section.cirkler {
     display: none;
     position: absolute;
     top: -20px;
-    left: 50%;
+    left: 80%;
+    width: 300%;
+    font-family: roboto;
     transform: translate(-50%);
     background: #8099e4ed;
     border: 1px solid var(--secondary-color);
@@ -341,6 +348,21 @@ label[for="menu-bar"]  {
         
     }
 
+    .popup {
+        display: none;
+        position: absolute;
+        top: -20px;
+        left: 100%;
+        width: 200%;
+        font-family: roboto;
+        transform: translate(-50%);
+        background: #8099e4ed;
+        border: 1px solid var(--secondary-color);
+        padding: 10px;
+        border-radius: 0px;
+        box-shadow: 0 2px 5px var(--secondary-color);
+        z-index: 10;
+    }
     
     
     header {
@@ -425,7 +447,18 @@ label[for="menu-bar"]  {
         
         }
         
-
+        section.cirkler {
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            align-items: center;
+          
+        }
+    
+        #circle1, #circle5, #circle3 {
+            margin:0;
+        
+        }
         header .navbar ul li a:hover {
             background:var(--secondary-color);
             color: var(--primary-color);
@@ -471,6 +504,18 @@ label[for="menu-bar"]  {
         line-break: auto;
     }
 
+    section.cirkler {
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+       
+        align-items: center;
+    }
+
+    #circle1, #circle5, #circle3 {
+        margin:0;
+    
+    }
+
     }
 
     @media (max-width: 610px) {
@@ -478,6 +523,36 @@ label[for="menu-bar"]  {
         body {
             height: 300vh;
         }
+
+        .infographic {
+            position: relative;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+           
+            
+        }
+
+        main {
+            margin: 20px 40px;
+        }
+        .popup {
+            display: none;
+            position: absolute;
+            top: -20px;
+            left: 86%;
+            width: 200%;
+            font-family: roboto;
+            transform: translate(-50%);
+            background: #8099e4ed;
+            border: 1px solid var(--secondary-color);
+            padding: -9px;
+            border-radius: 0px;
+            box-shadow: 0 2px 5px var(--secondary-color);
+            z-index: 10;
+        }
+
         .footer {
       
             
@@ -498,6 +573,19 @@ label[for="menu-bar"]  {
              #insta {
              width: 100%;
              }
+
+             section.cirkler {
+                display: flex;
+                flex-direction: row;
+                flex-wrap: wrap;
+                align-items: center;
+              
+            }
+        
+            #circle1, #circle5, #circle3 {
+                margin:0;
+            
+            }
        
             }
     
@@ -508,7 +596,7 @@ label[for="menu-bar"]  {
     }
     
     main {
-        margin: 20px 0px;
+        margin: 20px 20px;
     }
     h1 {
         font-size: 2.7rem;
@@ -521,12 +609,37 @@ label[for="menu-bar"]  {
         font-weight: 450;
        
     }
-   
-    .event {
-        width: 70%;
+            
+    section.cirkler {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+      
     }
-                   
 
+    img {
+        width: 64%;
+        height: auto;
+        margin-bottom: 51px;
+    }
+
+    .popup {
+        display: none;
+        position: absolute;
+        top: -20px;
+        left: 50%;
+        width: 213%;
+        font-family: roboto;
+        transform: translate(-50%);
+        background: #8099e4ed;
+        border: 1px solid var(--secondary-color);
+        padding: 10px;
+        border-radius: 0px;
+        box-shadow: 0 2px 5px var(--secondary-color);
+        z-index: 10;
+    }
     }
 
 
@@ -564,6 +677,44 @@ label[for="menu-bar"]  {
             font-family: 'Orbitron', "Open sans", "Roboto", sans-serif;
         }
 
+
+        section.cirkler {
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            align-items: center;
+          
+        }
+    
+        #circle1, #circle5, #circle3 {
+            margin:0;
+        
+        }
+    
+
+
+
+.popup {
+    display: none;
+    position: absolute;
+    top: -20px;
+    left: 134%;
+    width: 230%;
+    /* height: auto; */
+    font-family: roboto;
+    transform: translate(-50%);
+    background: #8099e4ed;
+    border: 1px solid var(--secondary-color);
+    padding: 10px;
+    border-radius: 0px;
+    box-shadow: 0 2px 5px var(--secondary-color);
+    z-index: 10;
+}
+img {
+    width: 56%;
+    height: auto;
+    margin-bottom: 51px;
+}
     }
 
 
@@ -588,6 +739,12 @@ label[for="menu-bar"]  {
     
         body {
             height: 295vh;
+        }
+
+        img {
+            width: 20%;
+            height: auto;
+            margin-bottom: 51px;
         }
        
     }
