--- a/style.css/vind.css
+++ b/style.css/vind.css
@@ -327,7 +327,7 @@ label[for="menu-bar"]  {
         position: absolute;
         width: 200px;
         height: auto;
-        top: 11%;
+        top: 12%;
         left: 50%;
         transform: translate(-50%, -50%); 
     }
@@ -343,11 +343,7 @@ label[for="menu-bar"]  {
         font-size: 2.5rem;
     }
 
-    .konkurrence h5 {
-        font-size: 1.8rem;
-        margin: 21px 125px;
-       
-    }
+    
     
     .spotify a {
         font-size: 2.5rem;
@@ -357,12 +353,7 @@ label[for="menu-bar"]  {
         font-size: 2.5rem;
     }
 
-    h6 {
-        text-align: start;
-        font-size: 1.7rem;
-        margin: 60px 122px;
-        font-weight: 500;
-    }
+    
 
     body {
         height: 365vh;
@@ -626,7 +617,7 @@ label[for="menu-bar"]  {
     @media (max-width: 1002px) and (min-width: 810px) {
 
         body {
-            height: 170vh;
+            height: 340vh;
         }
            
             header .navbar ul {
@@ -652,6 +643,15 @@ label[for="menu-bar"]  {
                 color: var(--primary-color);
                 font-size: 30px;
                 font-weight: 1000;
+                font-family: 'Orbitron', "Open sans", "Roboto", sans-serif;
+            }
+            .spotify a {
+                text-decoration: none;
+                color: #000;
+                font-size: 3rem;
+                text-align: center;
+                font-weight: 600;
+                margin-bottom: 50px;
                 font-family: 'Orbitron', "Open sans", "Roboto", sans-serif;
             }
     
