--- a/style.css/historie.css
+++ b/style.css/historie.css
@@ -41,6 +41,12 @@ h1 {
     font-family: 'Orbitron', "Open sans", "Roboto", sans-serif;
 }
 
+h3 {
+    color: #000;
+    font-size: 4rem;
+    font-family: 'Orbitron', "Open sans", "Roboto", sans-serif;
+    text-align: center; 
+}
 
 
 
