redigering af css

--- a/style.css/historie.css
+++ b/style.css/historie.css
@@ -55,6 +55,7 @@ h2 {
     color: var(--primary-color);
     font-size: 15rem;
     margin-left: 163px;
+    font-family: 'Orbitron', "Open sans", "Roboto", sans-serif;
 }
 
 
@@ -66,7 +67,7 @@ h2 {
 #stor {
     margin-top: -150px;
     font-size: 6rem;
-    margin-left: 340px;
+    margin-left: 350px;
     color: var(--secondary-color);
     font-weight: 800;
 }
