--- a/style.css/billet.css
+++ b/style.css/billet.css
@@ -586,10 +586,13 @@ label[for="menu-bar"]  {
 
 
 
-    p {
-        font-size: 2rem;
-        font-weight: 500;
-    }
+  
+        p {
+            font-size: 2rem;
+            font-weight: 450;
+            font-family: 'Roboto', "Open sans", sans-serif;
+        }
+    
 
 
 
