--- a/style.css/del.css
+++ b/style.css/del.css
@@ -606,9 +606,9 @@ label[for="menu-bar"]  {
         @media (min-width: 1003px) {
           
             p {
-                text-align: start;
-                font-size: 1.7rem;
-                margin: 4px 34px;
+                font-size: 2rem;
+                font-weight: 450;
+                font-family: 'Roboto', "Open sans", sans-serif;
             }
         
         
