--- a/style.css/forside.css
+++ b/style.css/forside.css
@@ -665,10 +665,13 @@ label[for="menu-bar"]  {
         margin: 25px 30px;
     }
 
+   
     p {
         font-size: 2rem;
-        font-weight: 500;
+        font-weight: 450;
+        font-family: 'Roboto', "Open sans", sans-serif;
     }
+
 
     form.nyhedsbrev input#email, input#fornavn {
         display: block;
