--- a/style.css/vind.css
+++ b/style.css/vind.css
@@ -680,6 +680,14 @@ label[for="menu-bar"]  {
                 font-size: 1.7rem;
                 margin: 40px 178px;
             }
+
+
+            h4 {
+                font-size: 2rem;
+                font-weight: 450;
+                font-family: 'Roboto', "Open sans", sans-serif;
+            }
+        
           
         
             .logo {
