--- a/style.css/del.css
+++ b/style.css/del.css
@@ -15,7 +15,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     height: 680vh;
-    font-family: "Roboto+mono", Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Roboto', "Open sans", sans-serif;
 }
 
 
